css/styles.css
body, html{
    height: 100%;
    margin:0;
    font-size:16px;
    font-family: "Lato", sans-serif;
    font-weight: 400;
    line-height: 1.8em;
    color: #666;
}

.pimg1, .pimg2, .pimg3{
    position: relative;
    opacity: 0.70;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;

    /*
    fixed = parallax effect
    scroll = normal
    (parallax may look weird in mobile)
    */

    background-attachment: fixed;
}

.pimg1{
    background-image: url('../img/image1.jpg');
    min-height: 100%;
}

.pimg2{
    background-image: url('../img/image2.jpg');
    /*background-repeat: no-repeat;*/
    min-height: 400px;

}

.pimg3{
    background-image: url('../img/image3.jpg');
    min-height: 400px;
}

.section{
    text-align: center;
    padding: 50px 80px;
}

.section-light{
    background-color: #f4f4f4;
    color: #666;
}

.section-dark{
    background-color: #282e34;
    color: #ddd;
}

.ptext{
    position: absolute;
    top: 50%;
    width: 100%;
    text-align: center;
    color: ghostwhite;
    font-size: 27px;
    letter-spacing: 8px;
    text-transform: uppercase;
}

.ptext .border{
    background-color: #111;
    color: ghostwhite;
    padding: 20px;
}

.ptext .border.trans{
    background-color: transparent;
}

